fixed the look on small screens

--- a/css/style.production.css
+++ b/css/style.production.css
@@ -356,17 +356,17 @@ button:focus,
 }
 
 .img {
-	height: 500px;
-	width: 750px;
+	height: 450px;
+	width: 650px;
 }
 
 .grid {
 	display: -ms-grid;
 	display: grid;
-	-ms-grid-columns: 900px 900px;
-	grid-template-columns: 900px 900px;
-	-ms-grid-rows: 720px 850px 720px;
-	grid-template-rows: 720px 770px 720px;
+	-ms-grid-columns: 500px 500px;
+	grid-template-columns: 700px 700px;
+	-ms-grid-rows: 820px 950px 820px;
+	grid-template-rows: 820px 870px 820px;
 	text-align: center;
 	-webkit-box-pack: center;
 	-ms-flex-pack: center;
